Fixed display on small wide screens

--- a/static/main.css
+++ b/static/main.css
@@ -1064,7 +1064,7 @@ svg {
     box-shadow: 0 -10px 10px -10px grey;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 500px) and (min-height: 800px) {
     #gamePage_speakerListener {
         height: 250px;
     }
